# representation-engineering-guard

./: .gitignore  README.md  build_datasets.ipynb  pyproject.toml  repre_guard.ipynb  test.ipynb
examples/fairness/: fairness.ipynb  utils.py
examples/harmless_harmful/: harmless_llama2.ipynb
examples/honesty/: honesty.ipynb  honesty_contrast_vec_TQA_generation.ipynb  honesty_contrast_vec_TQA_mc.ipynb  honesty_mistral.ipynb  utils.py
examples/languages/: vn_llama3.ipynb
examples/memorization/: quote_completions_control.ipynb  utils.py
examples/primary_emotions/: emotion_concept.ipynb  emotion_function.ipynb  utils.py
lorra_finetune/src/: args.py  llama2_lorra.py  train_val_datasets.py
repe/: guard_dataloader.py  rep_control_contrast_vec.py  rep_control_pipeline.py  rep_control_reading_vec.py  rep_readers.py  rep_reading_pipeline.py
repe_eval/: rep_reading_eval.py
repe_eval/examples/: decoder_repe_eval.ipynb  encoder_repe_eval.ipynb
repe_eval/tasks/: __init__.py  arc.py  csqa.py  obqa.py  race.py  tqa.py  utils.py
